--- a/app/assets/scss/_variables.scss
+++ b/app/assets/scss/_variables.scss
@@ -15,7 +15,7 @@ $light:     #f8f9fa;
 $dark:      #1e2a38;
 
 // Typography
-$font-family-sans-serif: 'Segoe UI', system-ui, -apple-system, sans-serif;
+$font-family-sans-serif: 'DM Sans', system-ui, -apple-system, sans-serif;
 $font-size-base:         1rem;
 $headings-font-weight:   700;
 
